--- a/frontend/src/app/game/game.component.css
+++ b/frontend/src/app/game/game.component.css
@@ -1,3 +1,24 @@
+.controls {
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.controls .buttons {
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+}
+
+.controls .buttons button {
+  border: 2px blue solid;
+  border-radius: 8px;
+  background-color: #7393b3;
+  font-size: 26px;
+  padding: 6px;
+}
+
 .container {
   display: grid;
   padding: 10px;
@@ -57,6 +78,11 @@
 
 .container .blue-bottom {
   border-bottom: 2px blue solid;
+}
+
+.container .highlight {
+  background-color: #f48fb1;
+  color: #7b1fa2;
 }
 
 .container .index {
