--- a/frontend/src/app/game/game.component.css
+++ b/frontend/src/app/game/game.component.css
@@ -105,7 +105,7 @@
   width: 100%;
   text-align: center;
   vertical-align: middle;
-  color: darkgray;
+  color: black;
   font-size: 28px;
 }
 
@@ -113,6 +113,7 @@
   display: inline-block;
   width: 100%;
   text-align: center;
+  color: darkgray;
   vertical-align: middle;
   font-size: 32px;
 }
